--- a/styles/NewResume.css
+++ b/styles/NewResume.css
@@ -1,284 +1,285 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .container {
-    width: 922px;
-    color: #002775;
-    padding-top: 50px;
+  width: 922px;
+  color: #002775;
+  padding-top: 50px;
 }
 
 .left-container {
-    width: 205px;
-    display: inline-block;
-    padding-bottom: 50px;
-    padding-left: 50px;
+  width: 205px;
+  display: inline-block;
+  padding-bottom: 50px;
+  padding-left: 50px;
 }
 
 .right-container {
-    left: 256px;
-    width: 560px;
-    display: inline-block;
-    padding-bottom: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-    vertical-align: top;
+  left: 256px;
+  width: 560px;
+  display: inline-block;
+  padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  vertical-align: top;
 }
 
 .right-container p {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .profile {
-    text-align: center;
-    padding-top: 12px;
-    padding-bottom: 5px;
-    padding-right: 3px;
+  text-align: center;
+  padding-top: 12px;
+  padding-bottom: 5px;
+  padding-right: 3px;
 }
 
 .profile-image {
-    width: 140px;
-    border-radius: 50%;
+  width: 140px;
+  border-radius: 50%;
 }
 
 .name {
-    text-align: center;
-    font-size: 24px;
-    font-family: urbane-bold;
-    padding-top: 16px;
-    padding-bottom: 6px;
+  text-align: center;
+  font-size: 24px;
+  font-family: urbane-bold;
+  padding-top: 16px;
+  padding-bottom: 6px;
 }
 
 .role {
-    margin-top: 0;
-    font-size: 18px;
-    font-family: arkit-regular;
-    padding-bottom: 35px;
+  margin-top: 0;
+  font-size: 18px;
+  font-family: arkit-regular;
+  padding-bottom: 35px;
 }
 
 .profile-detail {
-    padding-bottom: 0px;
-    font-family: arkit-regular;
-    font-weight: bold;
-    font-size: 11px;
+  padding-bottom: 0px;
+  font-family: arkit-regular;
+  font-weight: bold;
+  font-size: 11px;
 }
 
-.logo {
-    padding-right: 16px;
-    width: 12px;
-    height: 12px;
-    vertical-align: middle;
-    display: inline-block;
+i {
+  padding-right: 16px;
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
+  display: inline-block;
+  color: black;
 }
 
 .logo-nearer {
-    display: inline-block;
+  display: inline-block;
 }
 
-.button-container{
-    padding-top: 40px;
+.button-container {
+  padding-top: 40px;
 }
 
 button {
-    background-color: #377cfe;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 27px;
-    padding-right: 27px;
-    border-radius: 10px;
-    border: none;
-    font-weight: bold;
-    color: white;
-    font-size: 10px;
+  background-color: #377cfe;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 27px;
+  padding-right: 27px;
+  border-radius: 10px;
+  border: none;
+  font-weight: bold;
+  color: white;
+  font-size: 10px;
 }
 
 .heading {
-    font-family: urbane-bold;
-    font-size: 23px;
-    margin-top: 0;
-    padding-top: 6px;
+  font-family: urbane-bold;
+  font-size: 23px;
+  margin-top: 0;
+  padding-top: 6px;
 }
 
 .experience-container {
-    width: 100%;
+  width: 100%;
 }
 
 .experience-container .heading {
-    padding-top: 40px;
-    padding-bottom: 8px;
+  padding-top: 40px;
+  padding-bottom: 8px;
 }
 
 .experience-container .heading p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
-.experience-container .logo {
-    padding-right: 2px;
-    width: 10px;
-    height: 10px;
-    vertical-align: middle;
-    display: inline-block;
+.experience-container i {
+  padding-right: 2px;
+  width: 10px;
+  height: 10px;
+  vertical-align: middle;
+  display: inline-block;
 }
 
 .education-content {
-    width: 540px;
+  width: 540px;
 }
 
 .education-container .heading {
-    padding-top: 50px;
+  padding-top: 50px;
 }
 
 .summary-container {
-    padding-left: 5px;
-} 
+  padding-left: 5px;
+}
 
 .summary-content {
-    font-size: 13.4px;
-    padding-right: 25px;
-    line-height: 1.6;
-    font-family: cinio-thin;
-    font-weight: bold;
+  font-size: 13.4px;
+  padding-right: 25px;
+  line-height: 1.6;
+  font-family: cinio-thin;
+  font-weight: bold;
 }
 
 .left-ec-container {
-    width: 340px;
-    padding-top: 16px;
-    padding-bottom: 18px;
-    display: inline-block;
+  width: 340px;
+  padding-top: 16px;
+  padding-bottom: 18px;
+  display: inline-block;
 }
 
 .right-ec-container {
-    width: 189px;
-    text-align: right;
-    display: inline-block;
-    vertical-align: top;
-    padding-top: 8px;
-    padding-bottom: 20px;
-    padding-right: 10px;
+  width: 189px;
+  text-align: right;
+  display: inline-block;
+  vertical-align: top;
+  padding-top: 8px;
+  padding-bottom: 20px;
+  padding-right: 10px;
 }
 
 .left-ed-container {
-    width: 340px;
-    padding-top: 14px;
-    padding-bottom: 10px;
-    display: inline-block;
+  width: 340px;
+  padding-top: 14px;
+  padding-bottom: 10px;
+  display: inline-block;
 }
 
 .right-ed-container {
-    width: 189px;
-    text-align: right;
-    display: inline-block;
-    vertical-align: top;
-    padding-top: 20px;
-    padding-bottom: 10px;
+  width: 189px;
+  text-align: right;
+  display: inline-block;
+  vertical-align: top;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .designation {
-    font-size: 17px;
-    font-family: arkit-regular;
+  font-size: 17px;
+  font-family: arkit-regular;
 }
 
 .designation p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .period {
-    padding-bottom: 10px;
-    font-size: 10px;
-    font-family: arkit-regular;
-    color: #7784ac;
+  padding-bottom: 10px;
+  font-size: 10px;
+  font-family: arkit-regular;
+  color: #7784ac;
 }
 
 .right-ed-container .period {
-    padding-top: 30px;
-    font-size: 9px;
-    color: #7784ac;    
+  padding-top: 30px;
+  font-size: 9px;
+  color: #7784ac;
 }
 
 .location-company-container {
-    width: 340px
+  width: 340px;
 }
 
 .work-content {
-    margin-bottom: 0;
-    display: inline-block;
-    vertical-align: middle;
+  margin-bottom: 0;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .company {
-    width: 100px;
-    color: #7784ac;
-    font-size: 12px;
-    vertical-align: top;
-    font-family: arkit-regular;
-    display: inline-block;
+  width: 100px;
+  color: #7784ac;
+  font-size: 12px;
+  vertical-align: top;
+  font-family: arkit-regular;
+  display: inline-block;
 }
 
 .location {
-    width: 220px;
-    color: #7784ac;
-    font-size: 12px;
-    vertical-align: top;
-    display: inline-block;
-    font-family: arkit-regular;
+  width: 220px;
+  color: #7784ac;
+  font-size: 12px;
+  vertical-align: top;
+  display: inline-block;
+  font-family: arkit-regular;
 }
 
 .work-time {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .work-time button {
-    text-align: center;
-    color: #002775;
-    background-color: #d7ffe0;
-    border-radius: 24px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 18px;
-    padding-right: 18px;
-    font-weight: bold;
+  text-align: center;
+  color: #002775;
+  background-color: #d7ffe0;
+  border-radius: 24px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 18px;
+  padding-right: 18px;
+  font-weight: bold;
 }
 
 .content {
-    display: inline-block;
-    vertical-align: middle;
-    padding-bottom: 9px;
-    padding-top: 9px;
+  display: inline-block;
+  vertical-align: middle;
+  padding-bottom: 9px;
+  padding-top: 9px;
 }
 
 .degree {
-    font-size: 16px;
-    padding-top: 6px;
-    padding-bottom: 10px;
+  font-size: 16px;
+  padding-top: 6px;
+  padding-bottom: 10px;
 }
 
 .degree p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .college {
-    font-family: arkit-regular;
-    font-size: 12px;
-    color: #7784ac;
+  font-family: arkit-regular;
+  font-size: 12px;
+  color: #7784ac;
 }
 
 hr {
-    margin-top: 0;
-    margin-bottom: 0;
-    opacity: 15%;
+  margin-top: 0;
+  margin-bottom: 0;
+  opacity: 15%;
 }
 
 @font-face {
-    font-family: urbane-bold;
-    src: url(Urbane-Bold.ttf);
+  font-family: urbane-bold;
+  src: url(Urbane-Bold.ttf);
 }
 
 @font-face {
-    font-family: cinio-thin;
-    src: url(CinioText-Thin.otf);
+  font-family: cinio-thin;
+  src: url(CinioText-Thin.otf);
 }
 
 @font-face {
-    font-family: arkit-regular;
-    src: url(Arkit-Regular.ttf);
+  font-family: arkit-regular;
+  src: url(Arkit-Regular.ttf);
 }
