--- a/styles/ToDo.css
+++ b/styles/ToDo.css
@@ -1,4 +1,4 @@
-body {
+body, p, ol {
   margin: 0;
 }
 
@@ -47,6 +47,7 @@ body {
 .todo-container {
   width: 63px;
   height: 48px;
+  margin-top: 12px;
   display: inline-block;
   vertical-align: top;
 }
@@ -123,6 +124,14 @@ input:focus::placeholder {
   border-right: 1px groove rgb(224, 222, 222);
 }
 
+ol {
+	list-style: none;
+  padding-left: 0px;
+}
+
+ol div:first-child {
+  overflow-y:scroll;
+}
 .main-container {
   width: 1551px;
   height: 913px;
@@ -143,29 +152,30 @@ input:focus::placeholder {
 }
 
 .task .material-symbols-rounded,
-.side-menu-option-container .material-symbols-rounded {
+li .material-symbols-rounded {
   color: rgb(59, 59, 59);
   margin-left: 24px;
   margin-top: 14px;
   font-size: 20px;
 }
 
-.menu-detail {
+li div {
   display: inline-block;
   padding-left: 12px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
+  padding-top: 14px;
   vertical-align: top;
 }
 
-.side-menu-option-container {
+li {
   width: 290px;
   height: 44px;
   display: inline-block;
 }
 
 .all-apps-button-container:hover,
-.side-menu-option-container:hover,
+li:hover,
 .logo-container:hover,
 .task-adder:hover {
   background-color: rgb(228, 226, 226);
@@ -191,17 +201,17 @@ input:focus::placeholder {
   display: inline-block;
 }
 
-.task-input {
+/* .task-input {
   display: inline-block;
   height: 40px;
   width: 180px;
   vertical-align: top;
   padding-top: 6px;
-}
+} */
 
-.task-input input {
+#task-input {
   display: inline-block;
-  height: 36px;
+  /* height: 36px; */
   width: 150px;
   border: 0;
   background: none;
