--- a/styles/ToDo.css
+++ b/styles/ToDo.css
@@ -127,11 +127,10 @@ input:focus::placeholder {
 ol {
 	list-style: none;
   padding-left: 0px;
+  height: 800px;
+  overflow-y: scroll;
 }
 
-ol div:first-child {
-  overflow-y:scroll;
-}
 .main-container {
   width: 1551px;
   height: 913px;
@@ -230,7 +229,7 @@ li:hover,
   width: 290px;
   height: 48px;
   display: inline-block;
-  margin-top: 518px;
+  /* margin-top: 518px; */
 }
 
 .logo-container {
@@ -240,6 +239,7 @@ li:hover,
   display: inline-block;
 }
 
+.add-task-creation-container .material-symbols-rounded,
 .bottom-logo-container .logo-container .material-symbols-rounded {
   color: rgb(59, 59, 59);
   padding-top: 14px;
@@ -278,13 +278,13 @@ li:hover,
   display: inline-block;
 }
 
-.my-day {
+#menu div {
   display: inline-block;
   vertical-align: top;
-  padding-top: 16px;
+  /* padding-top: 16px; */
 }
 
-.my-day p {
+#menu div p {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 18px;
@@ -314,11 +314,14 @@ li:hover,
 }
 .add-task-container {
   /* background-color: limegreen; */
-  width: 1510px;
+  padding: 0 10px;
+  width: 1410px;
   height: 52px;
   display: inline-block;
   margin-top: 16px;
   margin-left: 20px;
+  border-radius: 5px;
+  border: 2px groove rgb(224, 222, 222);
 }
 
 .task-detail {
@@ -336,7 +339,11 @@ li:hover,
 
 .add-task-creation-container {
   /* background-color: mediumorchid; */
-  width: 1552px;
+  padding: 0 10px;
+  width: 1410px;
   height: 45px;
+  margin-left: 20px;
+  border-radius: 5px;
+  border: 2px groove rgb(224, 222, 222);
   display: inline-block;
 }
