--- a/styles/ToDo.css
+++ b/styles/ToDo.css
@@ -124,7 +124,7 @@ input:focus::placeholder {
   border-right: 1px groove rgb(224, 222, 222);
 }
 
-ol {
+.side-container ol {
 	list-style: none;
   padding-left: 0px;
   height: 800px;
@@ -151,14 +151,14 @@ ol {
 }
 
 .task .material-symbols-rounded,
-li .material-symbols-rounded {
+.side-container li .material-symbols-rounded {
   color: rgb(59, 59, 59);
   margin-left: 24px;
   margin-top: 14px;
   font-size: 20px;
 }
 
-li div {
+.side-container li div {
   display: inline-block;
   padding-left: 12px;
   font-family: Arial, Helvetica, sans-serif;
@@ -167,7 +167,7 @@ li div {
   vertical-align: top;
 }
 
-li {
+.side-container li {
   width: 290px;
   height: 44px;
   display: inline-block;
@@ -208,7 +208,7 @@ li:hover,
   padding-top: 6px;
 } */
 
-#task-input {
+#tasklist-input {
   display: inline-block;
   /* height: 36px; */
   width: 150px;
@@ -288,6 +288,7 @@ li:hover,
   margin-top: 0;
   margin-bottom: 0;
   font-size: 18px;
+  padding-left: 10px;
 }
 
 .more-logo {
@@ -312,6 +313,8 @@ li:hover,
 .top-tool-bar-subline-container p {
   margin: 0;
 }
+
+.task-container #tasks div,
 .add-task-container {
   /* background-color: limegreen; */
   padding: 0 10px;
@@ -346,4 +349,14 @@ li:hover,
   border-radius: 5px;
   border: 2px groove rgb(224, 222, 222);
   display: inline-block;
+}
+.add-task-creation-container button {
+  width: 50px;
+  height: 35px;
+  vertical-align: top;
+  margin-top: 5px;
+}
+
+.add-task-creation-container .material-symbols-rounded {
+  margin-left: 10px;
 }
