--- a/styles/ToDo.css
+++ b/styles/ToDo.css
@@ -1,22 +1,24 @@
-body, p, ol {
+body,
+p,
+ol {
   margin: 0;
 }
 
 .container {
-  width: 1848px;
-  height: 962px;
+  width: 100%;
+  height: 100%;
 }
 
 .top-container {
   background-color: #2564cf;
-  width: 1848px;
-  height: 48px;
+  width: 100%;
+  height: 4.5%;
   color: white;
 }
 
 .bottom-container {
-  width: 1848px;
-  height: 913px;
+  width: 100%;
+  height: 95%;
 }
 
 .all-apps-button-container {
@@ -39,28 +41,28 @@ body, p, ol {
   margin-left: 30px;
 }
 .top-container .material-symbols-rounded {
-  width: 20px;
-  height: 20px;
-  margin: 10px;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin: 0.625rem;
 }
 
 .todo-container {
-  width: 63px;
-  height: 48px;
-  margin-top: 12px;
+  width: 3.9375rem;
+  height: 2.25rem;
+  margin-top: 0.75rem;
   display: inline-block;
   vertical-align: top;
 }
 
 .todo-container p {
   font-family: "Segoe", "Segoe UI", "Arial", "sans-serif";
-  font-size: 16px;
-  padding-left: 2px;
+  font-size: 1rem;
+  padding-left: 0.125rem;
 }
 
 .search-box-container {
-  width: 1480px;
-  height: 48px;
+  width: 92.5rem;
+  height: 3rem;
   display: inline-block;
   text-align: center;
   vertical-align: top;
@@ -72,11 +74,11 @@ body, p, ol {
 }
 
 .search-tool-bar {
-  width: 300px;
-  height: 32px;
+  width: 18.75rem;
+  height: 2rem;
   display: inline-block;
   vertical-align: top;
-  padding-top: 5px;
+  padding-top: 0.3125rem;
 }
 
 .search-tool-bar input {
@@ -94,19 +96,19 @@ input:focus::placeholder {
 
 .search-logo .material-symbols-rounded {
   padding: 0;
-  margin-top: 5px;
+  margin-top: 0.3125rem;
   transform: scaleX(-1);
 }
 
 .search-box {
-  width: 400px;
-  height: 32px;
+  width: 25rem;
+  height: 2rem;
   display: inline-block;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   border: 0;
   text-align: left;
-  margin-top: 6px;
-  margin-left: 40px;
+  margin-top: 0.375rem;
+  margin-left: 2.5rem;
   background-color: white;
 }
 
@@ -125,7 +127,7 @@ input:focus::placeholder {
 }
 
 .side-container ol {
-	list-style: none;
+  list-style: none;
   padding-left: 0px;
   height: 800px;
   overflow-y: scroll;
@@ -187,8 +189,11 @@ li:hover,
 }
 
 .task {
-  width: 290px;
-  height: 44px;
+  padding-left: 10px;
+  padding-top: 10px;
+  width: 1310px;
+  vertical-align: middle;
+  /* height: 44px; */
   display: inline-block;
 }
 
@@ -284,6 +289,20 @@ li:hover,
   /* padding-top: 16px; */
 }
 
+.add-button-container {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 1220px;
+}
+
+#side-menu {
+  display: inline-block;
+}
+
+#task-list-menu {
+  display: inline-block;
+}
+
 #menu div p {
   margin-top: 0;
   margin-bottom: 0;
@@ -314,21 +333,46 @@ li:hover,
   margin: 0;
 }
 
-.task-container #tasks div,
+#tasks {
+  overflow-y: scroll;
+  height: 685px;
+}
+
+.task-container #tasks > div,
 .add-task-container {
   /* background-color: limegreen; */
+  /* display: inline-block; */
   padding: 0 10px;
   width: 1410px;
   height: 52px;
   display: inline-block;
   margin-top: 16px;
   margin-left: 20px;
-  border-radius: 5px;
-  border: 2px groove rgb(224, 222, 222);
+  border-radius: 4px;
+  /* border: 2px groove rgb(224, 222, 222); */
+  box-shadow: 0px 0.3px 0.9px rgba(0, 0, 0, 0.1),
+    0px 1.6px 3.6px rgba(0, 0, 0, 0.1);
+}
+
+.check-container {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.star-container {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 10px;
+  padding-top: 10px;
+  /* padding-left: 1220px; */
 }
 
 .task-detail {
+  vertical-align: top;
   padding-top: 10px;
+  display: inline-block;
 }
 
 .task-detail input {
@@ -346,8 +390,10 @@ li:hover,
   width: 1410px;
   height: 45px;
   margin-left: 20px;
-  border-radius: 5px;
-  border: 2px groove rgb(224, 222, 222);
+  border-radius: 4px;
+  /* border: 2px groove rgb(224, 222, 222); */
+  box-shadow: 0px 0.3px 0.9px rgba(0, 0, 0, 0.1),
+    0px 1.6px 3.6px rgba(0, 0, 0, 0.1);
   display: inline-block;
 }
 .add-task-creation-container button {
@@ -355,6 +401,7 @@ li:hover,
   height: 35px;
   vertical-align: top;
   margin-top: 5px;
+  background-color: white;
 }
 
 .add-task-creation-container .material-symbols-rounded {
