--- a/styles/ToDo.css
+++ b/styles/ToDo.css
@@ -90,7 +90,7 @@ ol {
   color: transparent;
 }
 
-input:focus::placeholder {
+.search-tool-bar input:focus::placeholder {
   color: gray;
 }
 
@@ -137,6 +137,7 @@ input:focus::placeholder {
   width: 1551px;
   height: 913px;
   display: inline-block;
+  background-color: #faf9f8;
 }
 
 .side-header-container {
@@ -283,6 +284,10 @@ li:hover,
   display: inline-block;
 }
 
+.sub-line-task {
+  display: inline-block;
+}
+
 #menu div {
   display: inline-block;
   vertical-align: top;
@@ -340,7 +345,7 @@ li:hover,
 
 .task-container #tasks > div,
 .add-task-container {
-  /* background-color: limegreen; */
+  background-color: white;
   /* display: inline-block; */
   padding: 0 10px;
   width: 1410px;
@@ -359,6 +364,7 @@ li:hover,
   vertical-align: top;
   padding-left: 10px;
   padding-top: 10px;
+  color: #2564cf;
 }
 
 .star-container {
@@ -366,7 +372,17 @@ li:hover,
   vertical-align: top;
   padding-left: 10px;
   padding-top: 10px;
+  color: #2564cf;
+  /* background-color: #2564cf; */
   /* padding-left: 1220px; */
+}
+
+#filled {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
 }
 
 .task-detail {
@@ -384,6 +400,13 @@ li:hover,
   outline: none;
 }
 
+.task-detail input::placeholder {
+  color: black;
+}
+
+.task-detail input:focus::placeholder {
+  color: #2564cf;
+}
 .add-task-creation-container {
   /* background-color: mediumorchid; */
   padding: 0 10px;
@@ -406,4 +429,20 @@ li:hover,
 
 .add-task-creation-container .material-symbols-rounded {
   margin-left: 10px;
+}
+
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 300,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+#show-menu {
+  display: inline-block;
+}
+
+#hide-menu {
+  display: none;
 }
